<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <StackView
        android:id="@+id/stackView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <StackView
        android:id="@+id/stackView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"

        app:layout_constraintBottom_toTopOf="@+id/tableLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/stopView"
        android:layout_width="match_parent"
        android:layout_height="800dp"

        android:onClick="@string/action_Diviser"
        app:layout_constraintBottom_toBottomOf="@+id/stackView"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/cardWrapper"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4">
        <!--app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"-->
        <!--app:layout_constraintTop_toTopOf="@+id/constraintLayout2"--> </LinearLayout>


    <TextView
        android:id="@+id/total"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/total_style"
        android:gravity="center"
        android:padding="@dimen/default_5dp"
        android:text="0"
        android:textColor="@color/verylightGray"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/stackView"
        app:layout_constraintEnd_toStartOf="@+id/stackView"
        app:layout_constraintTop_toTopOf="@+id/stackView" />

    <TextView
        android:id="@+id/total1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/total_style"
        android:gravity="center"
        android:padding="@dimen/default_5dp"
        android:text="0"
        android:textColor="@color/lightGray"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/stackView1"
        app:layout_constraintStart_toEndOf="@+id/stackView1"
        app:layout_constraintTop_toTopOf="@+id/stackView1" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/buttonTirer"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:drawableRight="@drawable/ic_hit"
                android:paddingRight="@dimen/default_20dp"
                android:text="@string/action_Tirer"
                android:textSize="@dimen/button_dimen" />

            <Button
                android:id="@+id/buttonRester"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:drawableRight="@drawable/ic_stand"
                android:paddingRight="@dimen/default_20dp"
                android:text="@string/action_Rester"
                android:textSize="@dimen/button_dimen" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/buttonDoubler"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:drawableRight="@drawable/ic_double"
                android:paddingRight="@dimen/default_20dp"
                android:text="@string/action_Doubler"
                android:textSize="@dimen/button_dimen" />
        </TableRow>

    </TableLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/betLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/betView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/darkGray"
            android:clickable="false"
            />

        <TextView
            android:id="@+id/title"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_20dp"
            android:text="BlackJack"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/betView"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/betView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/betView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/betInput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_style"
                android:textSize="30dp"
                android:ems="5"
                android:inputType="number"
                />

            <Button
                android:id="@+id/betButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_10dp"
                android:background="@drawable/button_style"
                android:text="BET" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/hit" />

        <TextView
            android:id="@+id/portefeuille"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Portefeuille:"

            app:layout_constraintBottom_toTopOf="@+id/solde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/solde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DefaultTextStyle"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="00.00"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SubtitleTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/solde" />



    </androidx.constraintlayout.widget.ConstraintLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>